# KinectIP

./: .gitignore  README.md
ECAD/: KinectIP.b#1  KinectIP.b#2  KinectIP.b#3  KinectIP.b#4  KinectIP.b#5  KinectIP.b#6  KinectIP.b#7  KinectIP.b#8  KinectIP.b#9  KinectIP.brd  KinectIP.s#1  KinectIP.s#2  KinectIP.s#3  KinectIP.s#4  KinectIP.s#5  KinectIP.s#6  KinectIP.s#7  KinectIP.s#8  KinectIP.s#9  KinectIP.sch
ECAD/gerbers/KinectIP v1.0/DrillFiles/: drills.xln
ECAD/gerbers/KinectIP v1.0/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_bottom.gbr  solderpaste_top.gbr
ECAD/lbr/: BOJIT Logos.lbr  Female-Header.lbr  LED-90-Degree.lbr  Right-Angle-Switch.lbr  Rock64.lbr  con-jack-3D.lbr  diy-modules-3D.lbr
MCAD/: 2 pin Header.step  Barrel Jack.step  Estimate.stl  KinectIP_Casing_V1.stl  LED-90-Degree.step  MP1584 DC-DC Converter.step  Right-Angled-Switch.step  Rock64.step
cpp_core/: CMakeLists.txt  aarch64.cmake
cpp_core/include/NDI/: Processing.NDI.Embedded.h
cpp_core/include/PicoPNG/: picopng.hpp
cpp_core/src/: game_interface.cpp  gpio.cpp  main.cpp  main.h
cpp_core/src/GPIO_Bash/bash/: rock64-gpiolib.sh
deploy_scripts/: install_full.sh  install_libfreenect2.sh  install_webserver.sh
docs/: Build_Process.md
documentation/: placeholder.txt
resources/NDI/: libndi.so.3.8.0
web_interface/: form_handler.php  index.php  script.js  setup.README  shutdown.php  telemetry.php
web_interface/config/: defaults.conf  settings.conf
